@@ -1568,6 +1568,7 @@ namespace
                         sm = new
                           spot::scc_info(p,
                                          spot::scc_info_options::TRACK_STATES);
+                        sm->determine_unknown_acceptance();
                       }
                     catch (const std::bad_alloc&)
                       {
