@@ -1,6 +1,13 @@
 New in spot 2.9.1.dev  (not yet released)
 
-  Nothing yet.
+  Bugs fixed:
+
+  - ltlcross --csv=... --product=N with N>0 could output spurious
+    diagnosics claiming that words were rejected when evaluating
+    the automaton on state-space.
+
+  - spot::scc_info::determine_unknown_acceptance() now also update the
+    result of spot::scc_info::one_accepting_scc().
 
 New in spot 2.9.1 (2020-07-15)
 
